--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
 </head>
 <body>
 
-  <h1>Hello, class! I love coding</h1>
-  <h2>Helen is gonna teach us how to code today</h2>
+  <h1>My fabulous website</h1>
+  <h2>welcome to this amazing place</h2>
 
+  <h3>These are the <i>images</i></h3>
+
+  <img src="content.png" alt="content">	
+  <img src="design.png" alt="design">		
+  <img src="online.png" alt="online">
+
+  <h4> <strong>Footer</strong></h4>
+
+  <ul>
+  	<li>
+  		<a href="#">Facebbok</a>
+  	</li> 
+  	<li>
+  		<a href="#">Instagram</a>
+  	</li>
+  	<li>
+  		<a href="#">Twitter</a>
+  	</li>
+  		
+  </ul>
 </body>
+
 </html>
