--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
   <h3>These are the <i>images</i></h3>
 
-  <img src="content.png" alt="content">	
-  <img src="design.png" alt="design">		
-  <img src="online.png" alt="online">
+  <img src="images/content.png" alt="content">	
+  <img src="images/design.png" alt="design">		
+  <img src="images/online.png" alt="online">
 
   <h4> <strong>Footer</strong></h4>
 
