--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 
   <h3>These are the <i>images</i></h3>
 
-  <img src="images/content.png" alt="content">	
-  <img src="images/design.png" alt="design">		
-  <img src="images/online.png" alt="online">
+  <img src="images/content.png">
+  <p>a wonderful blue cube</p>
+
+  <img src="images/design.png">
+  <p>bla bla bla</p>	
+
+  <img src="images/online.png">
+  <p>a cat</p>
 
   <h4> <strong>Footer</strong></h4>
 
