--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>My first website</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
